support modern jvm logs